// Copyright 2024 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package grpc.plugin.livestateapi.v1alpha1;
option go_package = "github.com/pipe-cd/pipecd/pkg/plugin/api/v1alpha1/livestate";

import "pkg/model/application_live_state.proto";
import "pkg/model/application.proto";
import "pkg/plugin/api/v1alpha1/common/common.proto";

// LivestateService defines the public API for the livestate feature for plugin.
service LivestateService {
    // GetLivestate gets the application live state for the give app id.
    rpc GetLivestate(GetLivestateRequest) returns (GetLivestateResponse) {}
}

message GetLivestateRequest {
    string application_id = 1;
    grpc.plugin.common.v1alpha1.DeploymentSource deploy_source = 2;
    repeated string deploy_targets = 3;
}

message GetLivestateResponse {
    model.ApplicationLiveState application_live_state = 1;
    model.ApplicationSyncState sync_state = 2;
}
